--- a/src/app/components/view3d/view3d.component.scss
+++ b/src/app/components/view3d/view3d.component.scss
@@ -1,9 +1,7 @@
 .view {
 	position: absolute;
-	inset: 0 0 24px 0;
+	inset: 0;
 }
-
-/* leave space at bottom for status bar */
 canvas {
 	width: 100%;
 	height: 100%;
