--- a/src/app/views/about/about.view.scss
+++ b/src/app/views/about/about.view.scss
@@ -1,7 +1,12 @@
 .about {
 	max-width: 960px;
-	margin: 2rem auto;
+	margin: 72px auto 2rem auto; /* leave space under header */
 	padding: 0 1rem;
 	display: grid;
 	gap: 1rem;
+}
+
+:host {
+	display: block;
+	background: transparent;
 }
